Prevent image overflow the card container

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
   vertical-align: middle;
 }
 
+.card img {
+  max-width: 100%;
+}
+
 .progress {
   margin-top: 0;
 }
